# RayTracingCpp

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Circle.h  Color.h  Cone.h  Cube.h  Cylinder.h  Entity.h  FCone.h  FCylinder.h  HPoint.h  HVector.h  Light.h  Material.h  Matrix.h  Object.h  Plan.h  Point.h  Ray.h  Renderer.h  Scene.h  SceneLoader.h  Sphere.h  Square.h  Tore.h  Triangle.h  Utils.h  Vector.h
res/: scene.json
src/: Camera.cpp  Circle.cpp  Color.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Entity.cpp  FCone.cpp  FCylinder.cpp  HPoint.cpp  HVector.cpp  Light.cpp  Material.cpp  Matrix.cpp  Object.cpp  Plan.cpp  Point.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  SceneLoader.cpp  Sphere.cpp  Square.cpp  Tore.cpp  Triangle.cpp  Vector.cpp  main.cpp
